fix gpu to device

--- a/text1.AE_PyTorch.ipynb
+++ b/text1.AE_PyTorch.ipynb
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "b27fec7a-0a60-4582-95bf-548b3fff66b3",
    "metadata": {},
    "outputs": [
@@ -184,7 +184,19 @@
       "Epoch:5\t=====last batch loss:3.695521593093872\n",
       "Epoch:6\t=====last batch loss:3.0953471660614014\n",
       "Epoch:7\t=====last batch loss:2.9020485877990723\n",
-      "Epoch:8\t=="
+      "Epoch:8\t=====last batch loss:3.0827300548553467\n",
+      "Epoch:9\t=====last batch loss:3.065711736679077\n",
+      "Epoch:10\t=====last batch loss:2.2469937801361084\n",
+      "Epoch:11\t=====last batch loss:2.782947540283203\n",
+      "Epoch:12\t=====last batch loss:2.455803632736206\n",
+      "Epoch:13\t=====last batch loss:3.3548364639282227\n",
+      "Epoch:14\t=====last batch loss:2.3363473415374756\n",
+      "Epoch:15\t=====last batch loss:2.288115978240967\n",
+      "Epoch:16\t=====last batch loss:3.062293529510498\n",
+      "Epoch:17\t=====last batch loss:2.3599071502685547\n",
+      "Epoch:18\t=====last batch loss:2.2705986499786377\n",
+      "Epoch:19\t=====last batch loss:2.7228190898895264\n",
+      "Epoch:20\t=====last batch loss:2.1954903602600098\n"
      ]
     }
    ],
@@ -196,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "916d1218-fe49-4930-8b3b-a94bf9e6f87e",
    "metadata": {},
    "outputs": [],
@@ -243,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "225f3236-7cc3-4c64-b794-3231010ede8d",
    "metadata": {},
    "outputs": [],
@@ -254,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "b7d74ee0-a984-4f26-a0a2-98ea3245c49b",
    "metadata": {},
    "outputs": [],
@@ -289,10 +301,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "81839809-b3d4-480d-88ad-90e6c9bdd2aa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RNN_AE_Net(\n",
+       "  (emb): Embedding(1110, 300)\n",
+       "  (rnnEncoder): RNN_encoder(\n",
+       "    (rnn_cell): RNNCell(300, 200)\n",
+       "  )\n",
+       "  (fc_E2D): Linear(in_features=200, out_features=200, bias=True)\n",
+       "  (rnnDecoder): RNN_decoder(\n",
+       "    (rnn_cell): RNNCell(300, 200)\n",
+       "    (fc): Linear(in_features=200, out_features=300, bias=True)\n",
+       "  )\n",
+       ")"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "class RNN_AE_Net(nn.Module):\n",
     "    def __init__(self, vocab_size, embed_dim, hidden_unitE, hidden_unitD):\n",
@@ -319,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "e4672e91-7e43-45cc-a657-904853ce7b52",
    "metadata": {},
    "outputs": [],
@@ -353,12 +386,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "0ff756e2-3492-4614-b015-220bb8cffd00",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch:1\t=====last batch loss:1.1063904762268066\n",
+      "Epoch:2\t=====last batch loss:1.1015305519104004\n",
+      "Epoch:3\t=====last batch loss:1.0962250232696533\n",
+      "Epoch:4\t=====last batch loss:1.0912203788757324\n",
+      "Epoch:5\t=====last batch loss:1.0891518592834473\n",
+      "Epoch:6\t=====last batch loss:1.086581826210022\n",
+      "Epoch:7\t=====last batch loss:1.0821523666381836\n",
+      "Epoch:8\t=====last batch loss:1.078304409980774\n",
+      "Epoch:9\t=====last batch loss:1.0785313844680786\n",
+      "Epoch:10\t=====last batch loss:1.070932388305664\n",
+      "Epoch:11\t=====last batch loss:1.0637710094451904\n",
+      "Epoch:12\t=====last batch loss:1.0724480152130127\n",
+      "Epoch:13\t=====last batch loss:1.0683114528656006\n",
+      "Epoch:14\t=====last batch loss:1.0558257102966309\n",
+      "Epoch:15\t=====last batch loss:1.0469310283660889\n",
+      "Epoch:16\t=====last batch loss:1.0455999374389648\n",
+      "Epoch:17\t=====last batch loss:1.0410704612731934\n",
+      "Epoch:18\t=====last batch loss:1.0318052768707275\n",
+      "Epoch:19\t=====last batch loss:1.0438741445541382\n",
+      "Epoch:20\t=====last batch loss:1.040648102760315\n"
+     ]
+    }
+   ],
    "source": [
     "for epoch in range(20):\n",
     "    print(\"Epoch:{}\".format(epoch+1),end='\\t')\n",
@@ -385,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "72cb2221-bea5-47b4-a2db-8a6d26c80531",
    "metadata": {},
    "outputs": [],
@@ -396,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "69783c06-f963-4d6c-a215-71b97b9fee1a",
    "metadata": {},
    "outputs": [],
@@ -407,13 +467,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "efe76139-bc07-49ec-823a-6d15888a77b5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'<sos> i liked this movie a lot . it really intrigued me how deanna and alicia <unk> friends over such a tragedy . alicia was just a <unk> soul and deanna was so happy just to see someone after being shot . my only <unk> was that in the beginning it was kind of slow and it took <unk> to get to the <unk> of things . other than that it was great . <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> <eos> '"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "str = \"\"\n",
-    "for ii in inputs[:,0].numpy():\n",
+    "for ii in inputs[:,0].cpu().numpy():\n",
     "    str += vocab.lookup_token(ii)\n",
     "    str += \" \"\n",
     "str"
@@ -421,13 +492,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "ddb07a54-54af-483e-af4d-dcbaf3d15744",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'von ones what society equally favorite answers <eos> incredibly hidden horror knew entertainment live storyline describe interest imdb soon plays superb apart <eos> plays choice twists lars record lighting storyline live lighting fight tricks scene walter bed wave world investigating sides <eos> after main was lighting , lost tells much incredibly choice helps busy fantastic storyline incredibly camera recommended walter doll best believe recommended stop town <eos> open knew company incredibly john script <eos> sorry often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often often '"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "str = \"\"\n",
-    "for ii in pred_out[:,0].numpy():\n",
+    "for ii in pred_out[:,0].cpu().numpy():\n",
     "    str += vocab.lookup_token(ii)\n",
     "    str += \" \"\n",
     "str"
@@ -443,30 +525,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "9898aebf-bbf7-41b2-a9c1-56fa83008972",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "612"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "ii"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "e76f5056-5f84-4ba0-ba25-0fec127d3d8d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "vocab['<eos>']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "f043df4f-4970-41ba-9d3e-55e4ae427577",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'<eos>'"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "vocab.lookup_token(vocab['<eos>'])"
    ]
