--- a/Basis/Text_Preprocess_PyTorch.ipynb
+++ b/Basis/Text_Preprocess_PyTorch.ipynb
@@ -44,7 +44,33 @@
     "```\n",
     "2. 创建词表 vocab\n",
     "\n",
-    "3. 词表向量化：tf-idf/one-hot/散列编码/embedding"
+    "3. 词表向量化：tf-idf/one-hot/散列编码/embedding\n",
+    "\n",
+    "\n",
+    "[gensim](https://radimrehurek.com/gensim/auto_examples/tutorials/run_word2vec.html#sphx-glr-auto-examples-tutorials-run-word2vec-py) 进行word2vec: 根据语料中词汇一起出现的频率（co-occurrence），进行word embedding。\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d45bccc6",
+   "metadata": {},
+   "source": [
+    "### recall: word2vec \n",
+    "\n",
+    "根据语料中词汇一起出现的频率（co-occurrence），进行word embedding。\n",
+    "\n",
+    "工具包：[gensim](https://radimrehurek.com/gensim/auto_examples/tutorials/run_word2vec.html#sphx-glr-auto-examples-tutorials-run-word2vec-py)\n",
+    "\n",
+    "![](word2vec/1.PNG) \n",
+    "\n",
+    "参考\n",
+    "\n",
+    "[1-原文] https://arxiv.org/pdf/1301.3781.pdf  \n",
+    "[2-优化Skip-gram] https://arxiv.org/pdf/1310.4546.pdf  \n",
+    "[3-释意] https://arxiv.org/pdf/1411.2738.pdf  \n",
+    "[4-帮助理解-数学描述] https://zhuanlan.zhihu.com/p/595381757  \n",
+    "[5-帮助理解-负采样] http://mccormickml.com/2017/01/11/word2vec-tutorial-part-2-negative-sampling/"
    ]
   },
   {
