--- a/Basis/Transformer_PyTorch.ipynb
+++ b/Basis/Transformer_PyTorch.ipynb
@@ -100,12 +100,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "82ae0cfa-9542-4d15-97b5-f6524e99aa1d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### How to use\n",
+    "\n",
+    "1. layer = [nn.TransformerEncoderLayer](https://pytorch.org/docs/stable/generated/torch.nn.TransformerEncoderLayer.html)\n",
+    "2. output = nn.TransformerEncoder(layer,num_layers)\n",
+    "3. Attention(output)\n"
+   ]
   }
  ],
  "metadata": {
