--- a/Basis/GNN_PyTorch.ipynb
+++ b/Basis/GNN_PyTorch.ipynb
@@ -43,7 +43,11 @@
    "id": "561bbfb8-72e0-4a23-8256-4b45927988b9",
    "metadata": {},
    "source": [
-    "## Input Format"
+    "## Input Format\n",
+    "\n",
+    "Neighbor Sampling: [torch_geometric.loader.NeighborLoader](https://pytorch-geometric.readthedocs.io/en/latest/tutorial/neighbor_loader.html)\n",
+    "\n",
+    "HeteroData: [torch_geometric.data.HeteroData](https://pytorch-geometric.readthedocs.io/en/latest/generated/torch_geometric.data.HeteroData.html)"
    ]
   },
   {
@@ -84,6 +88,39 @@
     "train_mask = [True, True, True, True, False]   ## use part of the graph when training?\n",
     "\n",
     "Data(x=x, edge_index=edge_index, y = y, train_mask = train_mask)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39d37a2c-bfc5-493e-a40e-fce062acd1b6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torch_geometric.loader import NeighborLoader\n",
+    "\n",
+    "x = torch.randn(8, 32)          # Node features  [num_nodes, num_features]\n",
+    "y = torch.randint(0, 4, (8, ))  # Node labels   [num_nodes]\n",
+    "\n",
+    "edge_index = torch.tensor([                       #   0  1\n",
+    "    [2, 3, 3, 4, 5, 6, 7],                        #  / \\/ \\\n",
+    "    [0, 0, 1, 1, 2, 3, 4]],                       # 2  3  4\n",
+    ")                                                 # |  |  |\n",
+    "data = Data(x=x, y=y, edge_index=edge_index)      # 5  6  7\n",
+    "\n",
+    "loader = NeighborLoader(              ## extract subgraph from the full graph: k-hoop neighours of some nodes\n",
+    "    data,\n",
+    "    input_nodes=torch.tensor([0]),    ## nodes to be sampled\n",
+    "    num_neighbors=[1,1],              ## 1-hoop: 1 neighours, 2-hoop: 1 neighours\n",
+    "    batch_size=1,                     ## how many input_nodes to be taken in one batch\n",
+    "    replace=False,\n",
+    "    shuffle=False)\n",
+    "\n",
+    "batch = next(iter(loader))\n",
+    "\n",
+    "batch.n_id                    ##    [0, 2, 5]     original id: node + k-hoop nodes selected\n",
+    "batch.edge_index              ## [[1, 2],[0, 1]]  index based on n_id above (subgraph)\n",
+    "batch.n_id[batch.edge_index]  ## [[2, 5],[0, 2]]  index based on original id (full graph)"
    ]
   },
   {
