--- a/Basis/GNN_PyTorch.ipynb
+++ b/Basis/GNN_PyTorch.ipynb
@@ -402,11 +402,13 @@
    "source": [
     "### Edge Level\n",
     "\n",
-    "Predict possible new edges (assume there are missing edges)\n",
+    "Example1: [GNN_HeteroG_LinkPred_PyTorch.ipynb](https://github.com/Jiarong-L/GAN_tutorial/Basis/GNN_HeteroG_LinkPred_PyTorch.ipynb)\n",
     "\n",
-    "Example2: https://github.com/pyg-team/pytorch_geometric/blob/master/examples/link_pred.py\n",
+    "Example2: [link_pred.py](https://github.com/pyg-team/pytorch_geometric/blob/master/examples/link_pred.py)\n",
     "\n",
-    "Idea: if 2 nodes' representation are similar, probably there will be a link"
+    "Idea: Gain nodes' representation, predict if there will be a link between (e.g.similar edges might have links between them)\n",
+    "\n",
+    "Some edges will be labels, others will be messaging passing path"
    ]
   },
   {
