--- a/Basis/Basis_Jax.ipynb
+++ b/Basis/Basis_Jax.ipynb
@@ -18,14 +18,14 @@
    "source": [
     "## Jax 基本操作\n",
     "\n",
-    "jnp操作类似np，PyTree类似dict，不过加上了自动微分和 JIT 编译功能（不过@jit只能用于静态的func！,否则参考‘有状态计算’）\n",
-    "\n",
-    "与TF基本通用\n",
-    "\n",
     "```\n",
     "pip install -U jax\n",
     "pip install -U flax\n",
-    "```"
+    "```\n",
+    "\n",
+    "jnp操作类似np，PyTree类似dict，不过加上了自动微分和 JIT 编译功能（不过@jit只能用于静态的func！,否则参考‘有状态计算’）\n",
+    "\n",
+    "与TF基本通用"
    ]
   },
   {
@@ -33,7 +33,16 @@
    "id": "5d20501a-4f51-4f7a-be8d-a337b2f64c6a",
    "metadata": {},
    "source": [
-    "###  1. 求导 & 求偏导 ----- jax.grad 获取func()对应的偏导数方程"
+    "###  1. 求导 & 求偏导 ----- jax.grad 获取func()对应的偏导数方程\n",
+    "dict数据求微分：\n",
+    "```\n",
+    "def fn(dictA):\n",
+    "    X = dictA['X']\n",
+    "\n",
+    "grad(fn)(dictA)\n",
+    "```\n",
+    "\n",
+    "https://jax.ac.cn/en/latest/automatic-differentiation.html#differentiating-with-respect-to-nested-lists-tuples-and-dicts"
    ]
   },
   {
@@ -290,7 +299,9 @@
    "metadata": {},
    "source": [
     "### 4. 设备控制\n",
-    "https://jax.ac.cn/en/latest/sharded-computation.html#sharded-computation"
+    "https://jax.ac.cn/en/latest/sharded-computation.html#sharded-computation\n",
+    "\n",
+    "**TODO：并行编程入门**  https://jax.ac.cn/en/latest/sharded-computation.html"
    ]
   },
   {
@@ -436,16 +447,11 @@
    "id": "07e5894d-ac27-47ca-86f4-2d9feb03255a",
    "metadata": {},
    "source": [
-    "### 6. 一些矩阵操作"
+    "### 6. 其它\n",
+    "1. 当使用 jax.jit() 转换函数时，print() 函数只会打印抽象追踪器值, 需使用jax.debug.print(x) 打印实际的运行时值\n",
+    "2. 可用 jax.debug.breakpoint() 假如断点\n",
+    "3. jax.jacfwd/jacrev [计算Jacobian/Hessian矩阵](https://jax.ac.cn/en/latest/advanced-autodiff.html#jacobians-and-hessians-using-jax-jacfwd-and-jax-jacrev)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "50f5fdaf-f85b-41c4-a3d9-9871c7110a69",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
