--- a/Basis/Basis_Jax.ipynb
+++ b/Basis/Basis_Jax.ipynb
@@ -25,7 +25,7 @@
     "\n",
     "jnp操作类似np，PyTree类似dict，不过加上了自动微分和 JIT 编译功能（不过@jit只能用于静态的func！,否则参考‘有状态计算’）\n",
     "\n",
-    "与TF基本通用"
+    "与TF基本通用(Deepmind)"
    ]
   },
   {
