--- a/Basis/Transformer_PyTorch.ipynb
+++ b/Basis/Transformer_PyTorch.ipynb
@@ -17,10 +17,12 @@
    "id": "72a49f40-4a32-42e6-9d31-558fd11dfbde",
    "metadata": {},
    "source": [
-    "Torch Example: https://github.com/Jiarong-L/BioDL/blob/main/VFDB_Pretein_Classifier/VFDB_Transformer.ipynb\n",
+    "Torch Example: https://github.com/Jiarong-L/BioDL/blob/main/1.%20Protein_seq_Classifier/VFDB_Transformer.ipynb\n",
     "\n",
     "1. PositionalEncoding\n",
-    "2. nn.TransformerEncoderLayer + nn.TransformerEncoder"
+    "2. nn.TransformerEncoderLayer + nn.\n",
+    "\n",
+    "[图示详解](https://zhuanlan.zhihu.com/p/338817680)：Attention矩阵的每一行，对应一个单词的表示"
    ]
   },
   {
@@ -213,7 +215,7 @@
     "(feature,pos_emb,'<sos> you like swimming') ---> Decoder ---> '<eos>'\n",
     "```\n",
     "\n",
-    "Decoder训练时已知晓生成的序列，可以一次计算它的attention矩阵；但输入时需要mask掉暂未使用的部分\n"
+    "Decoder训练时已知晓生成的序列，可以一次计算它的attention矩阵；但输入时需要mask掉暂未使用的部分：Masked_QK * V 得到 Masked Self-Attention\n"
    ]
   },
   {
